welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:2: error: ';' expected but ')' found.
	if ((getX() == getMondeLargeur-1)) && (getY() == getMondeHauteur)){
                                                                         ^LineByLine:10: error: '<-' expected but ')' found.
		for (i -< 1 to getMondeLargeur){
                                              ^LineByLine:20: error: illegal start of simple expression
	}
        ^